[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "share4v"
version = "1.0.0"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.4.0",
    "markdown2[all]", "numpy", "scikit-learn==1.2.2", "urllib3>=1.26.0", "requests", "httpx==0.24.0", "uvicorn", "fastapi","ftfy",
    "einops>=0.6.1", "einops-exts==0.0.4", "timm==0.6.13", "prettytable", "openpyxl"
]

[project.optional-dependencies]
train = ["deepspeed", "ninja", "wandb", "tensorboardX"]

[project.urls]
"Homepage" = "https://sharegpt4v.github.io/"
"Bug Tracker" = "https://github.com/InternLM/InternLM-XComposer/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
